--- a/Aier360/Base.lproj/Main.storyboard
+++ b/Aier360/Base.lproj/Main.storyboard
@@ -282,7 +282,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
                                         <connections>
-                                            <outlet property="delegate" destination="QUJ-83-BfB" id="uif-fE-0rK"/>
+                                            <outlet property="delegate" destination="QUJ-83-BfB" id="NJh-mU-2k4"/>
                                         </connections>
                                     </textField>
                                 </subviews>
@@ -405,7 +405,7 @@
                                             <constraint firstAttribute="width" constant="273" id="qtl-hk-Wz9"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新密码(6-20位，不能有空格)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IzJ-3g-PDw">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新密码(6-20位，不能有空格)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IzJ-3g-PDw" customClass="ZXPasswordTextField">
                                         <rect key="frame" x="168" y="20" width="265" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="TSK-cG-o4g"/>
@@ -438,7 +438,7 @@
                                             <constraint firstAttribute="width" constant="273" id="fM6-T6-osG"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="确认新密码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dNV-dK-mMW">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="确认新密码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dNV-dK-mMW" customClass="ZXPasswordTextField">
                                         <rect key="frame" x="160" y="20" width="281" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="WL3-DH-pkk"/>
