--- a/Aier360/Controllers/联系人/Contacts.storyboard
+++ b/Aier360/Controllers/联系人/Contacts.storyboard
@@ -483,8 +483,8 @@
                                                     <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JR4-n9-jjP">
-                                                    <rect key="frame" x="65" y="31" width="457" height="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JR4-n9-jjP">
+                                                    <rect key="frame" x="65" y="31" width="457" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.63137254899999995" green="0.61568627450000002" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -527,7 +527,7 @@
                                                 <constraint firstItem="HD4-iN-HmE" firstAttribute="leading" secondItem="pQU-nZ-60t" secondAttribute="leading" constant="15" id="7og-Ry-Y9Z"/>
                                                 <constraint firstItem="1Rt-k8-4zV" firstAttribute="leading" secondItem="HD4-iN-HmE" secondAttribute="trailing" constant="15" id="O0w-Zr-MQR"/>
                                                 <constraint firstItem="c1f-Ib-W6S" firstAttribute="leading" secondItem="1Rt-k8-4zV" secondAttribute="trailing" constant="8" id="QpF-g0-ds1"/>
-                                                <constraint firstAttribute="bottom" secondItem="JR4-n9-jjP" secondAttribute="bottom" constant="9" id="Ym0-Vu-KkT"/>
+                                                <constraint firstAttribute="bottom" secondItem="JR4-n9-jjP" secondAttribute="bottom" constant="6" id="Ym0-Vu-KkT"/>
                                                 <constraint firstAttribute="trailing" secondItem="c1f-Ib-W6S" secondAttribute="trailing" constant="15" id="ama-xo-KYN"/>
                                                 <constraint firstItem="c1f-Ib-W6S" firstAttribute="leading" secondItem="JR4-n9-jjP" secondAttribute="trailing" constant="8" id="igX-eW-202"/>
                                                 <constraint firstItem="HD4-iN-HmE" firstAttribute="top" secondItem="pQU-nZ-60t" secondAttribute="top" constant="10" id="iro-JE-CwC"/>
